# Chess-Engine-C

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  debug.sh  makefile  setup.sh
include/: board.h  bot1.h  bot2.h  bot3.h  bot4.h  game.h  move.h  pgn-functions.h  piece-movements.h  random-bot.h  standardlist.h
src/: board.c  bot1.c  bot2.c  bot3.c  bot4.c  game.c  main.c  move.c  pgn-functions.c  piece-movements.c  random-bot.c  standardlist.c  test.c
